--- a/style.css
+++ b/style.css
@@ -59,6 +59,9 @@ section{
 .first-half img{
     width: 100%;
 }
+.dream{
+    margin-top: 100px;
+}
 .btn{
     text-decoration: none;
     background-image: linear-gradient(45deg,#de3e98 ,tomato);
